--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -435,7 +435,7 @@ index:
   # Independent config of home page subtitle
   slogan:
     enable: true
-
+ 
     # 为空则按 hexo config.subtitle 显示
     # If empty, text based on `subtitle` in hexo config
     text: " Always Keep A Beginner’s Mind."
@@ -546,7 +546,7 @@ post:
   # 在文章开头显示文章更新时间，该时间默认是 md 文件更新时间，可通过 front-matter 中 `updated` 手动指定（和 date 一样格式）
   # Update date is displayed at the beginning of the post. The default date is the update date of the md file, which can be manually specified by `updated` in front-matter (same format as date)
   updated:
-    enable: false
+    enable: ture
 
     # 描述文字
     # Descriptive text before date
