--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -419,7 +419,7 @@ footer:
 index:
   # 首页 Banner 头图，可以是相对路径或绝对路径，以下相同
   # Path of Banner image, can be a relative path or an absolute path, the same on other pages
-  banner_img: /img/banner.jpg
+  banner_img: /img/banner.webp
 
   # 头图高度，屏幕百分比
   # Height ratio of banner image
@@ -491,7 +491,7 @@ index:
 # Post Page
 #---------------------------
 post:
-  banner_img: /img/banner.jpg
+  banner_img: /img/banner.webp
   banner_img_height: 70
   banner_mask_alpha: 0.3
 
@@ -765,7 +765,7 @@ twikoo:
 # Archive Page
 #---------------------------
 archive:
-  banner_img: /img/banner.jpg
+  banner_img: /img/banner.webp
   banner_img_height: 60
   banner_mask_alpha: 0.3
   subtitle:
@@ -777,7 +777,7 @@ archive:
 #---------------------------
 category:
   enable: true
-  banner_img: /img/banner.jpg
+  banner_img: /img/banner.webp
   banner_img_height: 60
   banner_mask_alpha: 0.3
   subtitle:
@@ -807,7 +807,7 @@ category:
 #---------------------------
 tag:
   enable: true
-  banner_img: /img/banner.jpg
+  banner_img: /img/banner.webp
   banner_img_height: 80
   banner_mask_alpha: 0.3
   subtitle:
@@ -825,7 +825,7 @@ tag:
 #---------------------------
 about:
   enable: true
-  banner_img: /img/banner.jpg
+  banner_img: /img/banner.webp
   banner_img_height: 60
   banner_mask_alpha: 0.3
   subtitle:
@@ -849,7 +849,7 @@ about:
 # Custom Page through `hexo new page`
 #---------------------------
 page:
-  banner_img: /img/banner.jpg
+  banner_img: /img/banner.webp
   banner_img_height: 60
   banner_mask_alpha: 0.3
 
@@ -860,7 +860,7 @@ page:
 #---------------------------
 page404:
   enable: true
-  banner_img: /img/banner.jpg
+  banner_img: /img/banner.webp
   banner_img_height: 85
   banner_mask_alpha: 0.3
   subtitle: "Page not found"
@@ -872,7 +872,7 @@ page404:
 #---------------------------
 links:
   enable: true
-  banner_img: /img/banner.jpg
+  banner_img: /img/banner.webp
   banner_img_height: 60
   banner_mask_alpha: 0.3
   subtitle:
