--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "scripts": {
     "build": "hexo generate",
     "clean": "hexo clean",
-    "deploy": "hexo deploy",
-    "server": "hexo server"
+    "deploy": "hexo clean & hexo deploy -g",
+    "server": "hexo server",
+    "webp": "node tools/webp-conv.js"
   },
   "hexo": {
     "version": "8.1.1"
   },
   "dependencies": {
+    "fs-extra": "^11.3.3",
     "hexo": "^8.1.1",
     "hexo-deployer-git": "^4.0.0",
     "hexo-generator-archive": "^2.0.0",
@@ -26,5 +28,9 @@
     "hexo-server": "^3.0.0",
     "hexo-simple-image": "^1.0.4",
     "hexo-theme-fluid": "^1.9.8"
+  },
+  "devDependencies": {
+    "globby": "^16.1.1",
+    "sharp": "^0.34.5"
   }
 }
